[package]
name = "susblast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
dbase = { version = "0.4.0", features = ["serde"] }
explode = "0.1.2"
itertools = "0.11.0"
suppaftp = "5.2.0"
